fixed align of csv & picture output, nothing more

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -69,6 +69,8 @@ header {
 
 .droparea, .logger {
   margin-top: 24px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
